--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,14 @@
   <body id="page-top">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+     <!-- Bootstrap core JS -->
+     <script
+     src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+     crossorigin="anonymous"
+   ></script>
+   <!-- Core theme JS -->
+   <script src="%PUBLIC_URL%/js/scripts.js"></script>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
