--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,10 @@
      <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
      <!-- Core theme CSS (includes Bootstrap)-->
      <link href="%PUBLIC_URL%/css/styles.css" rel="stylesheet" />
+     <link
+     rel="stylesheet"
+     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+   />
   </head>
   <body id="page-top">
     <noscript>You need to enable JavaScript to run this app.</noscript>
